Split server and MCMC into layer modules